--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
+    "framer-motion": "^11.3.12",
+    "next": "14.2.5",
+    "react": "^18.3.1",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-fast-marquee": "^1.6.5",
+    "react-icons": "^5.2.1",
+    "react-measure": "^2.5.2",
+    "react-use-measure": "^2.1.1"
   },
   "devDependencies": {
+    "@types/react": "^18.3.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
