--- a/package.json
+++ b/package.json
@@ -9,16 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.7",
+    "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "aos": "^2.3.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.3.12",
+    "lucide-react": "^0.417.0",
     "next": "14.2.5",
     "react": "^18.3.1",
+    "react-animate-on-scroll": "^2.1.9",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.2.1",
     "react-measure": "^2.5.2",
-    "react-use-measure": "^2.1.1"
+    "react-use-measure": "^2.1.1",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/react": "^18.3.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
